# residual

./: README.md  pyproject.toml
residual/: ResidualNetwork.py  ResidualNetworkEncoder.py  __init__.py
residual/blocks/: BasicBlock.py  ProjectionBlock.py  __init__.py
residual/module/: BasicModule.py  ProjectionModule.py  __init__.py
